[MOD] 模板引擎显示页面

--- a/src/main/webapp/WEB-INF/views/thymeleaf/index.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>Welcome to Spittr by thymeleaf</h1>
-
+        <h3> index.html </h3>
         <a th:href="@{/spittle/spittles}">Spittles</a> |
         <a th:href="@{/spittle/register}">Register</a>
         <br/>
