--- a/src/main/webapp/WEB-INF/views/thymeleaf/index.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/index.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" type="text/css" th:href="@{/resources/style.css}"/>
     </head>
     <body>
+    <a th:href="@{/logout}">Logout</a>
+    <br/>
         <h1>Welcome to Spittr by thymeleaf</h1>
         <h3> index.html </h3>
         <a th:href="@{/spittle/spittles}">Spittles</a> |
