[MED] 初步Spring Security技术知识结束

--- a/src/main/webapp/WEB-INF/views/thymeleaf/page.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/page.html
@@ -2,6 +2,7 @@
       xmlns:th="http://www.thymeleaf.org">
       
   <body>
+  <span> <a href="/login?login=true">退出</a></span>
   
     <div th:fragment="header">
       <a th:href="@{/}">
